--- a/client/app.html
+++ b/client/app.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bengaluru House Price Prediction</title>
+        <title>Bengaluru House Price Regression</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="app.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="app.css">
     </head>    
 <body>
 <div class="img"></div>
+<nav class="navbar navbar-light bg-transparent justify-content-center">
+    <a class="navbar-brand" href="#"><h3>ifunanyaScript: House Price Prediction (Bengaluru)</h3></a>
+</nav>
 <form class="form">
-    <h2> Area (ft&sup2;)</h2>
-    <input class="area"  type="email" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
-    
     <h2>Location</h2>
         <div>
-            <select class="location" name="" id="uiLocations">
+            <select class="location" name="" id="locations">
                 <option value="" disabled="disabled" selected="selected">Choose a location!</option>
                     <option>WhiteField</option>
                     <option>Indira Nagar</option>
             </select>
         </div>
+
+    <h2> Area (ft&sup2;)</h2>
+        <input class="area"  type="email" id="area_sqft" class="floatLabel" name="Squareft" value="1500">
         
-    <h2>BHK</h2>
+    <h2>Bedrooms</h2>
     <div class="switch-field">
-        <input type="radio" id="radio-bhk-1" name="uiBHK" value="1"/>
-        <label for="radio-bhk-1">1</label>
-        <input type="radio" id="radio-bhk-2" name="uiBHK" value="2"/>
-        <label for="radio-bhk-2">2</label>
-        <input type="radio" id="radio-bhk-3" name="uiBHK" value="3" checked/>
-        <label for="radio-bhk-3">3</label>
-        <input type="radio" id="radio-bhk-4" name="uiBHK" value="4"/>
-        <label for="radio-bhk-4">4</label>
-        <input type="radio" id="radio-bhk-5" name="uiBHK" value="5"/>
-        <label for="radio-bhk-5">5</label>
+        <input type="radio" id="bedroom-1" name="bedrooms" value="1"/>
+        <label for="bedroom-1">1</label>
+        <input type="radio" id="bedroom-2" name="bedrooms" value="2"/>
+        <label for="bedroom-2">2</label>
+        <input type="radio" id="bedroom-3" name="bedrooms" value="3" checked/>
+        <label for="bedroom-3">3</label>
+        <input type="radio" id="bedroom-4" name="bedrooms" value="4"/>
+        <label for="bedroom-4">4</label>
+        <input type="radio" id="bedroom-5" name="bedrooms" value="5"/>
+        <label for="bedroom-5">5</label>
     </div>
 </form>
 <form class="form">
     <h2>Bathrooms</h2>
     <div class="switch-field">
-        <input type="radio" id="radio-bath-1" name="uiBathrooms" value="1"/>
-        <label for="radio-bath-1">1</label>
-        <input type="radio" id="radio-bath-2" name="uiBathrooms" value="2"/>
-        <label for="radio-bath-2">2</label>
-        <input type="radio" id="radio-bath-3" name="uiBathrooms" value="3" checked/>
-        <label for="radio-bath-3">3</label>
-        <input type="radio" id="radio-bath-4" name="uiBathrooms" value="4"/>
-        <label for="radio-bath-4">4</label>
-        <input type="radio" id="radio-bath-5" name="uiBathrooms" value="5"/>
-        <label for="radio-bath-5">5</label>
+        <input type="radio" id="bath-1" name="bathrooms" value="1"/>
+        <label for="bath-1">1</label>
+        <input type="radio" id="bath-2" name="bathrooms" value="2"/>
+        <label for="bath-2">2</label>
+        <input type="radio" id="bath-3" name="bathrooms" value="3" checked/>
+        <label for="bath-3">3</label>
+        <input type="radio" id="bath-4" name="bathrooms" value="4"/>
+        <label for="bath-4">4</label>
+        <input type="radio" id="bath-5" name="bathrooms" value="5"/>
+        <label for="bath-5">5</label>
     </div>
 
         <button class="submit" onclick="onClickedEstimatedPrice()" type="button">Estimated Price</button>
-        <div id="uiEstimatedPrice" class="result">  <h2></h2> </div>
+        <div id="price" class="result">  <h2></h2> </div>
 </body>
 </html>
 
